# dot-connect/main.go
@@ -6,24 +6,24 @@ import (
 	"net/http"
 	"time"
 
+	"log"
+
 	"github.com/gin-contrib/cors"
 	"github.com/gin-gonic/gin"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
-	"log"
-  
+
 	firebase "firebase.google.com/go"
 	// "google.golang.org/api/option"
 	"context"
 )
 
-
 func setupSwagger(r *gin.Engine) {
-    r.GET("/", func(c *gin.Context) {
-        c.Redirect(http.StatusFound, "/swagger/index.html")
-    })
+	r.GET("/", func(c *gin.Context) {
+		c.Redirect(http.StatusFound, "/swagger/index.html")
+	})
 
-    r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
+	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 }
 
 func main() {
@@ -41,27 +41,27 @@ func main() {
 		AllowHeaders:     []string{"Origin"},
 		ExposeHeaders:    []string{"Content-Length"},
 		AllowCredentials: true,
-		MaxAge: 12 * time.Hour,
-	  }))
+		MaxAge:           12 * time.Hour,
+	}))
 
 	// r.GET("/firebase", handler.GetFirebaseToken)
-	ctx := context.Background() 
+	ctx := context.Background()
 	conf := &firebase.Config{ProjectID: "dot-connect-374203"}
 	app, err := firebase.NewApp(ctx, conf)
 	if err != nil {
-	log.Fatalln(err)
+		log.Fatalln(err)
 	}
 
 	client, err := app.Firestore(ctx)
 	if err != nil {
-	log.Fatalln(err)
+		log.Fatalln(err)
 	}
 	defer client.Close()
 
 	reports := r.Group("/reports")
 	{
 		reports.POST("/upload", handler.PostReport)
-		reports.GET("/my/:userId", handler.GetUserReport(client))
+		reports.GET("/", handler.GetReports(client))
 		reports.GET("/:reportId", handler.GetDetailReport)
 	}
 	r.GET("/translation", handler.TranslateToBraille)
